@@ -58,6 +58,7 @@
             <value>
               <list>
                 <string>_setFile</string>
+                <string>_setData</string>
               </list>
             </value>
         </item>
