@@ -1,3 +1,6 @@
+2011-11-11 arnaud.fontaine
+* Fix document conversion not being performed when data is set directly.
+
 2011-10-24 Kazuhiko
 * make telephone field searchable in person_module view and organisation_module view.
 
